RDKPREINTG-15259: Device User dependency removal from execution
Reason for change: Device User dependency removal from execution
Test Procedure: with TDK TM
Risks: None

Change-Id: I2c406efe3d80a49efcb96bb0f3226f42dc10cdf9
Signed-off-by: Alan Jose <alan_jose@comcast.com>